# taikyokushogi

./: .gitignore  Cargo.toml  LICENSE  PIECES.md  README.md  pyproject.toml  web_gui.py
examples/: play.rs
src/: board.rs  eval.rs  lib.rs  movegen.rs  pieces.rs  python.rs  search.rs  tsfen.rs  types.rs
taikyoku_engine/: __init__.py  __main__.py  board.py  evaluation.py  main.py  move.py  movegen.py  pieces.py  search.py  tsfen.py  usi.py
